fix(css): checkbox cell :hover bleed fixed

--- a/src/front/less/tables.less
+++ b/src/front/less/tables.less
@@ -22,11 +22,14 @@
   .public_fixedDataTable_hasBottomBorder & { position: absolute; bottom: 0; }
   .public_fixedDataTable_footer & { position: absolute; bottom: -1px; }
 }
-.public_fixedDataTableCell_cellContent:hover {
+.public_fixedDataTableCell_cellContent {
   min-height: @ps-table-row-height;
   margin-right: 1px;
-  .public_fixedDataTable_bodyRow & { .state('warning'); }
-  .public_fixedDataTable_footer & { .state('info'); }
+  .public_fixedDataTableCell_main:first-child & { margin-left: -1px; }
+  &:hover {
+    .public_fixedDataTable_bodyRow & { .state('warning'); }
+    .public_fixedDataTable_footer & { .state('info'); }
+  }
 }
 // FIXME: scrollable cell :hover bleed on fixed cells, something like `.fixedDataTableRowLayout_body > :first-child { z-index: 1000 !important; }`
 // FIXME: header/footer shadow bleeds over footer cell :hover
